--- a/Index.html
+++ b/Index.html
@@ -247,18 +247,18 @@
 
     </footer>
 
-    <!-- <Section class="sec-end">
-        <div class="end-div">
-            <img src="./images/LogoTrans.png" alt="">
-            <p>Copyright 2021. All rights reserved.</p>
+    <Section class="sec-end">
+           <!-- <p>Copy Right 2018 © By Theme-fair All Rights Reserved.</p> -->
 
+           Copy Right 2018 © By <a href="#"><span class="copyright">Theme-fair</span></a> All Rights Reserved.
+           
+            <br>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-google"></a>
             <a href="#" class="fa fa-linkedin"></a>
             <a href="#" class="fa fa-twitter"></a>
 
-        </div>
-    </Section> -->
+    </Section>
 
 </body>
 
